tests/type/assign_float_to_int.rev
var a: int = 1.5 // error: trying to assign value of type 'float' to variable of type 'int'